--- a/digi_fab/5.html
+++ b/digi_fab/5.html
@@ -10,23 +10,77 @@
     <h2>アルミのスマホケース</h2>
 
 <div>家に家族が飲み終わったアルミ缶がたくさんあったのでこの際に、<br>
-    アルミを溶かして排熱効率のスマホケースを作ろうと思った。
+    アルミを溶かして排熱効率の良いスマホケースを作ろうと思った。
 </div>
 
 <h3>予想工程</h3>
 <img src="../digi_fab/final/souchi.jpg" width="50%">
 <img src="../digi_fab/final/kata.jpg" width="50%">
-
+<div>（アルミ缶を鉄の缶で溶かす理由は、<br>
+    アルミの融点が660.3℃なのに対して鉄は1,538℃だからである。）</div>
 
 <ol>
 <li>装置づくり</li>
 <li>型作り</li>
 </ol>
 
-<h3>やってみた</h3>
+<h3>実際にやってみた</h3>
+<div>まず素材を集める<br>
+<img src="../digi_fab/final/sozai.jpg" width="50%">
+<br>
+この他にも、
+<ol>
+<li>七輪</li>
+<li>木炭</li>
+<li>ペール缶ー燃やす装置の枠として</li>
+<li>鹿沼土ー燃やす装置の土壁として</li>
+<li>鉄パイプー炎に空気を送り高温にするため</li>
+</ol>
+を用意した。
 
-<img src="" alt="">
+</div>
 
+<img src="../digi_fab/final/nendo1.jpg" width="50%">
+<img src="../digi_fab/final/nendo2.jpg" width="50%"alt="">
+
+<br>
+<div>
+プランBとして石膏粘土で型を作ってみたところ、<br>
+思うように固まらなかったので却下することに。
+</div>
+
+
+
+<img src="../digi_fab/final/shichirin1.jpg" width="50%"alt="">
+<img src="../digi_fab/final/shichirin2.jpg"width="50%" alt="">
+<div>
+七輪で燃やしてみたが、<br>
+プラスチックは溶けてもアルミは溶けなかった。<br>
+より大きな容器なら、より高火力が出ると思い<br>
+ペール缶に変更。
+</div>
+<img src="../digi_fab/final/prlkan1.jpg" width="50%"alt="">
+<img src="../digi_fab/final/Fe_kan.jpg" width="50%"alt="">
+<div>
+しかし不運にも雨が降り始めたのと、<br>
+土壁が固まってなかった。<br>
+そして期限も迫っていたので中断することにした。<br>
+結局アルミは溶けず、型の段階には未到達のままとなった。
+</div>
+
+
+
+<h4>反省点</h4>
+<ul>
+    <li>難易度が高いので、<br>
+        やるなら時間を取り、得意な人同伴かしっかりと学習しておく方がよかったかも。</li>
+<li>溶けなかったのは単にアルミの融点に達しなかったことが<br>
+原因なので火力を高めたい。
+</li>
+
+
+
+</ul>
 
 
 <div>参考サイト
