--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <!--番号付きのリスト-->
         <ol>
             <li><a href="./de12/index.html">デザイン演習Ⅰ・Ⅱ</a></li>
-            <li><a href="./de12/index.html">デザイン演習Ⅲ・Ⅳ</a></li>
+            <li><a href="./de34/index.html">デザイン演習Ⅲ・Ⅳ</a></li>
+<br>
+
+            <li><a href="./de56/index.html">デザイン演習Ⅴ・Ⅵ</a></li>
             <li><a href="./digi_fab/index.html">デジタルファブリケーション</a></li>
         </ol>
 
