--- a/tpl_093/index.html
+++ b/tpl_093/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="最新技術と自然との調和を目指す">
+<meta name="description" content="XBPポートフォリオ一覧">
 <meta name="viewport" content="width=device-width">
-<title>SAMPLE COMPANY | 最新技術と自然との調和を目指す</title>
+<title>XBPポートフォリオ一覧</title>
 <link rel="stylesheet" media="all" href="css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="js/script.js"></script>
@@ -13,17 +13,19 @@
 <body id="top">
 <header id="header">
 	<div id="headerWrap">
-		<h1><img src="images/logo.png" width="142" height="80" alt="logo"></h1>
+		<!--xbplogo-->
+		<h1><img src="../images/0_XBlogo.png" width="142" height="80" alt="logo"></h1>
 		<nav id="mainnav">
 			<p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
 			<div class="panel">
 				<ul>
 					<li><a href="#top">TOP</a></li>
-					<li><a href="#sec01">MESSAGE</a></li>
-					<li><a href="#sec02">GALLERY</a></li>
-					<li><a href="#sec03">PROJECT</a></li>
+					<li><a href="#sec01">PROJECT</a></li>
+					<!--<li><a href="#sec02">MESSAGE</a></li>
+					<li><a href="#sec03">sec3</a></li>
 					<li><a href="#sec04">BRAND</a></li>
-					<li><a href="#sec05">COMPANY</a></li>
+						-->
+					<li><a href="#sec05">GALLERY</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -31,24 +33,63 @@
 </header>
 
 <div id="mainImg">
-	<img src="images/mainImg.jpg" alt="">
+	<!--トップ画面-->
+	<img src="../images/fablab.hp1.png" alt="">
 </div>
 
-<!-- MESSAGE -->
+<!-- PROJECT -->
 <section id="sec01">
+	<header>
+		<h2><span>Project</span></h2>
+	</header>
+
+	<!--de12-->
+	<div class="innerS">
+		<a href="../de12/index.html">
+    <img src="../images/number12.jpeg" width="500" height="333" alt="">
+<div>デザイン演習Ⅰ・Ⅱ</div></a>
+		</div>
+
+<!--digifab-->
+		<div class="innerS">
+			<a href="../digi_fab/index.html">
+		<img src="../images/fablab.hp1.png" width="500" height="333" alt="">
+<div>デジタルファブリケーション</div></a>
+		</div>
+		
+<!--de34-->
+		<div class="innerS">
+			<a href="../de34/index.html">
+		<img src="../images/number34.jpeg" width="500" height="333" alt="">
+<div>デザイン演習Ⅲ・Ⅳ</div></a>
+		</div>
+
+<!--de56-->		
+		<div class="innerS">					
+			<a href="../de56/index.html">
+		<img src="../images/number56.jpeg" width="500" height="333" alt="">
+		<div>デザイン演習Ⅴ・Ⅵ</div></a>
+					</div>
+</section>
+<!-- // PROJECT -->
+
+<img src="images/subImg.jpg" alt="">
+
+<!-- MESSAGE -->
+<section id="sec02">
 	<header>
 		<h2><span>Message</span></h2>
 	</header>
 	<div class="innerS">
-		ちかごろ世間で日本歴史の科学的研究ということがしきりに叫ばれている。科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいうには及ばないはずである。上にいったようなことがらについては、曖昧あいまいな態度をとり、または真実でない知識を強いて注入していたことも、明かな事実である。
-	</div>
+		今のところメッセージなし	</div>
 </section>
 <!-- // MESSAGE -->
 
 <!-- GALLERY -->
-<section id="sec02">
+<!--
+	<section id="sec03">
 	<header>
-		<h2><span>Gallery</span></h2>
+		<h2><span>sec3</span></h2>
 	</header>
 	<ul id="gallery">
 		<li><img src="images/photo01.jpg" width="426" height="418" alt=""></li>
@@ -61,24 +102,14 @@
 		<li><img src="images/photo08.jpg" width="426" height="418" alt=""></li>
 		<li><img src="images/photo09.jpg" width="426" height="418" alt=""></li>
 	</ul>
-</section>
+	</section> 
+-->
 <!-- // GALLERY -->
 
-<!-- PROJECT -->
-<section id="sec03">
-	<header>
-		<h2><span>Project</span></h2>
-	</header>
-	<div class="innerS">
-		<img src="images/imgProject.jpg" width="726" height="333" alt="">
-		<p>ちかごろ世間で日本歴史の今さらこと新しくいうには科学的研究ということがしきりに叫ばれているということがしきりに叫ばれている。科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいうには及ばないはずである。科学的研究というのが近代史学の学問的方法によるちかごろ世間で日本歴史の科学的研究及ばないはずである。</p>
-	</div>
-</section>
-<!-- // PROJECT -->
 
-<img src="images/subImg.jpg" alt="">
 
 <!-- BRAND --> 
+<!--
 <section id="sec04">
 	<header>
 		<h2><span>Brand</span></h2>
@@ -102,22 +133,21 @@
 	<div id="sec04_02">
 		<p><img src="images/logoBrand.png" width="340" height="107" alt=""></p>
 	</div>
+-->
 </section>
 <!-- // STORY -->
+-->
 
 <!-- COMPANY -->
 <section id="sec05">
 	<header>
-		<h2><span>Company</span></h2>
+		<h2><span>fablab minatomirai</span></h2>
 	</header>
 	<div class="innerS">
 		<ul class="col2">
 			<li>
-				<p>〒103-1234<br>見本県見本市仮区見本町1-3-5</p>
-				<p>TEL 01234-567-8901</p>
-				<p>e-Mail info@example.com</p>
-				<p>営業時間 10:00〜20:00（水曜定休）</p>
-				<p>※都合により休業する場合がございます</p>
+				<p>〒220-0012<br>神奈川県横浜市西区みなとみらい４丁目５−３</p>
+				
 				<p id="sns">
 					<a href="#" target="_blank"><img src="images/iconFb.png" width="20" height="20" alt="FB"></a>
 					<a href="#" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a>
@@ -128,8 +158,8 @@
 			<li>
 				<div id="map">
 					<!-- GOOGLE MAP -->
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3198.5937927089367!2d136.92980931491988!3d36.70829797996758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff781ec5af4ca3f%3A0x2ade3e8e4c2801b8!2z56aP5bKh6aeF!5e0!3m2!1sja!2sus!4v1478313402186" allowfullscreen></iframe>
-					<!-- // GOOGLE MAP -->
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3249.8456984287286!2d139.62572701525283!3d35.458614280246806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185c69af2750bd%3A0x2f02c40d622294b6!2z44CSMjIwLTAwMTIg56We5aWI5bed55yM5qiq5rWc5biC6KW_5Yy644G_44Gq44Go44G_44KJ44GE77yU5LiB55uu77yV4oiS77yT!5e0!3m2!1sja!2sjp!4v1629867745664!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <!-- // GOOGLE MAP -->
 				</div>
 			</li>
 		</ul>
@@ -138,7 +168,8 @@
 <!-- // COMPANY -->
 
 <footer id="footer">
-	Copyright(c) 2016 Sample Inc. All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank">http://f-tpl.com</a><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
+<!--	Copyright(c) 2016 Sample Inc. All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank">http://f-tpl.com</a>
+-->	<!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
 </footer>
 
 </body>
