--- a/firstHP/index.html
+++ b/firstHP/index.html
@@ -133,10 +133,10 @@
 	<div id="sec04_02">
 		<p><img src="images/logoBrand.png" width="340" height="107" alt=""></p>
 	</div>
-
-</section>-->
+-->
+</section>
 <!-- // STORY -->
-
+-->
 
 <!-- COMPANY -->
 <section id="sec05">
