--- a/de34/index.html
+++ b/de34/index.html
@@ -11,7 +11,12 @@
     <a href="../index.html"><img src="./images/0_XBlogo.png" alt=""></a>
     </logotohome>
     <h1>デザイン演習Ⅲ・Ⅳ</h1>
-        
-
+       
+    <h2>演習ノート一覧</h2>
+        <ol>
+            <li>
+                <a href="../de34/1.html" target="_blank">課題1　arduinoみたくifとloopで考える</a>
+            </li>
+        </ol>
 </body>
 </html>
