--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
 
 	<!--de12-->
 	<div class="innerS">
-		<a href="../de12/index.html">
+		
     <img src="../images/number12.jpeg" width="500" height="333" alt="">
-<div>デザイン演習Ⅰ・Ⅱ</div></a>
+<div>デザイン演習Ⅰ・Ⅱ</div><a href="../de12/index.html"></a>
 		</div>
 
 <!--digifab-->
 		<div class="innerS">
-			<a href="../digi_fab/index.html">
+			
 		<img src="../images/fablab.hp1.png" width="500" height="333" alt="">
-<div>デジタルファブリケーション</div></a>
+<div>デジタルファブリケーション</div><a href="../digi_fab/index.html"></a>
 		</div>
 		
 <!--de34-->
 		<div class="innerS">
-			<a href="../de34/index.html">
+			
 		<img src="../images/number34.jpeg" width="500" height="333" alt="">
-<div>デザイン演習Ⅲ・Ⅳ</div></a>
+<div>デザイン演習Ⅲ・Ⅳ</div><a href="../de34/index.html"></a>
 		</div>
 
 <!--de56-->		
 		<div class="innerS">					
-			<a href="../de56/index.html">
+			
 		<img src="../images/number56.jpeg" width="500" height="333" alt="">
-		<div>デザイン演習Ⅴ・Ⅵ</div></a>
+		<div>デザイン演習Ⅴ・Ⅵ</div><a href="../de56/index.html"></a>
 					</div>
 </section>
 <!-- // PROJECT -->
