--- a/index.html
+++ b/index.html
@@ -47,29 +47,35 @@
 	<div class="innerS">
 		
     <img src="../images/number12.jpeg" width="500" height="333" alt="">
-<div>デザイン演習Ⅰ・Ⅱ</div><a href="../de12/index.html"></a>
+<a href=></a>
+<a href="../de12/index.html" target="_blank">デザイン演習Ⅰ・Ⅱ</a>
 		</div>
 
 <!--digifab-->
 		<div class="innerS">
 			
 		<img src="../images/fablab.hp1.png" width="500" height="333" alt="">
-<div>デジタルファブリケーション</div><a href="../digi_fab/index.html"></a>
+<div></div><a href=></a>
 		</div>
-		
+		<a href="../digi_fab/index.html" target="_blank">デジタルファブリケーション</a>		
 <!--de34-->
 		<div class="innerS">
 			
 		<img src="../images/number34.jpeg" width="500" height="333" alt="">
-<div>デザイン演習Ⅲ・Ⅳ</div><a href="../de34/index.html"></a>
+<div>デザイン演習Ⅲ・Ⅳ</div><a href=></a>
 		</div>
+		<a href="../de34/index.html" target="_blank">デザイン演習Ⅲ・Ⅳ</a>
+
 
 <!--de56-->		
 		<div class="innerS">					
 			
 		<img src="../images/number56.jpeg" width="500" height="333" alt="">
 		<div>デザイン演習Ⅴ・Ⅵ</div><a href="../de56/index.html"></a>
-					</div>
+			</div>
+
+			<a href="../de56/index.html" target="_blank">デザイン演習Ⅴ・Ⅵ</a>
+
 </section>
 <!-- // PROJECT -->
 
