--- a/de34/1.html
+++ b/de34/1.html
@@ -3,7 +3,7 @@
 <head>
 
 
-    <title>小林正樹 2年次第1回</title>
+    <title>小林正樹 2年次第1回arduinoUNOを触る</title>
 
     <link rel="stylesheet" href="./css/style.css">
     </head>
@@ -26,6 +26,11 @@ if・・・もし、事務所から行方不明や防災、防犯の信号が来
 
     
      </div>
+
+<div>写真集</div>
+
+
+
 </body>
 <br>
 参考にしたサイト<br>
