--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="XBPポートフォリオ一覧">
+<meta name="description" content="アババババ">
 <meta name="viewport" content="width=device-width">
 <title>XBPポートフォリオ一覧</title>
 <link rel="stylesheet" media="all" href="css/style.css">
