--- a/index.html
+++ b/index.html
@@ -1,182 +1,29 @@
-<!doctype html>
-<html lang="ja">
+<!DOCTYPE html>
+<html lang="jp">
 <head>
-<meta charset="UTF-8">
-<meta name="description" content="アババババ">
-<meta name="viewport" content="width=device-width">
-<title>XBPポートフォリオ一覧</title>
-<link rel="stylesheet" media="all" href="css/style.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="js/script.js"></script>
+    <meta charset="UTF-8">
+    <title>XBP_HPsample</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+<body>
+    <logotohome>
+    <a href="./index.html"><img src="./images/0_XBlogo.png" alt=""></a>
+    </logotohome>
+    <h1>XBP</h1>
+        <h2>まさきのXBPポートフォリオ一覧</h2>
+        <!-- このようにするとコードとして認識されない。（メモができる）-->
+    
+        <!--番号付きのリスト-->
+        <ol>
+            <li><a href="./de12/index.html">デザイン演習Ⅰ・Ⅱ</a></li>
+            <li><a href="./de34/index.html">デザイン演習Ⅲ・Ⅳ</a></li>
+<br>
 
-<body id="top">
-<header id="header">
-	<div id="headerWrap">
-		<!--xbplogo-->
-		<h1><img src="../images/0_XBlogo.png" width="142" height="80" alt="logo"></h1>
-		<nav id="mainnav">
-			<p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
-			<div class="panel">
-				<ul>
-					<li><a href="#top">TOP</a></li>
-					<li><a href="#sec01">PROJECT</a></li>
-					<!--<li><a href="#sec02">MESSAGE</a></li>
-					<li><a href="#sec03">sec3</a></li>
-					<li><a href="#sec04">BRAND</a></li>
-						-->
-					<li><a href="#sec05">GALLERY</a></li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-</header>
+            <li><a href="./de56/index.html">デザイン演習Ⅴ・Ⅵ</a></li>
+            <li><a href="./digi_fab/index.html">デジタルファブリケーション</a></li>
+        </ol>
 
-<div id="mainImg">
-	<!--トップ画面-->
-	<img src="../images/fablab.hp1.png" alt="">
-</div>
+        <br>
+        <br>
 
-<!-- PROJECT -->
-<section id="sec01">
-	<header>
-		<h2><span>Project</span></h2>
-	</header>
-
-	<!--de12-->
-	<div class="innerS">
-		
-    <img src="../images/number12.jpeg" width="500" height="333" alt="">
-<a href=></a>
-<a href="../de12/index.html" target="_blank">デザイン演習Ⅰ・Ⅱ</a>
-		</div>
-
-<!--digifab-->
-		<div class="innerS">
-			
-		<img src="../images/fablab.hp1.png" width="500" height="333" alt="">
-<div></div><a href=></a>
-		</div>
-		<a href="../digi_fab/index.html" target="_blank">デジタルファブリケーション</a>		
-<!--de34-->
-		<div class="innerS">
-			
-		<img src="../images/number34.jpeg" width="500" height="333" alt="">
-<div>デザイン演習Ⅲ・Ⅳ</div><a href=></a>
-		</div>
-		<a href="../de34/index.html" target="_blank">デザイン演習Ⅲ・Ⅳ</a>
-
-
-<!--de56-->		
-		<div class="innerS">					
-			
-		<img src="../images/number56.jpeg" width="500" height="333" alt="">
-		<div>デザイン演習Ⅴ・Ⅵ</div><a href="../de56/index.html"></a>
-			</div>
-
-			<a href="../de56/index.html" target="_blank">デザイン演習Ⅴ・Ⅵ</a>
-
-</section>
-<!-- // PROJECT -->
-
-<img src="images/subImg.jpg" alt="">
-
-<!-- MESSAGE -->
-<section id="sec02">
-	<header>
-		<h2><span>Message</span></h2>
-	</header>
-	<div class="innerS">
-		今のところメッセージなし	</div>
-</section>
-<!-- // MESSAGE -->
-
-<!-- GALLERY -->
-<!--
-	<section id="sec03">
-	<header>
-		<h2><span>sec3</span></h2>
-	</header>
-	<ul id="gallery">
-		<li><img src="images/photo01.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo02.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo03.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo04.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo05.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo06.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo07.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo08.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo09.jpg" width="426" height="418" alt=""></li>
-	</ul>
-	</section> 
--->
-<!-- // GALLERY -->
-
-
-
-<!-- BRAND --> 
-<!--
-<section id="sec04">
-	<header>
-		<h2><span>Brand</span></h2>
-	</header>
-	<div class="inner">
-		<ul class="col3">
-			<li>
-				<p class="img"><img src="images/logo01.png" width="170" height="106" alt=""></p>
-				<p>科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいう。</p>
-			</li>
-			<li>
-				<p class="img"><img src="images/logo02.png" width="170" height="106" alt=""></p>
-				<p>日本歴史の科学的研究ということがしきりに叫ばれている。科学的研究というのが近代史学の学問的方法による研究という意義であるならば意義であるならば。</p>
-			</li>
-			<li>
-				<p class="img"><img src="images/logo03.png" width="170" height="106" alt=""></p>
-				<p>科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいう。</p>
-			</li>
-		</ul>
-	</div>
-	<div id="sec04_02">
-		<p><img src="images/logoBrand.png" width="340" height="107" alt=""></p>
-	</div>
-
-</section>-->
-<!-- // STORY -->
-
-
-<!-- COMPANY -->
-<section id="sec05">
-	<header>
-		<h2><span>fablab minatomirai</span></h2>
-	</header>
-	<div class="innerS">
-		<ul class="col2">
-			<li>
-				<p>〒220-0012<br>神奈川県横浜市西区みなとみらい４丁目５−３</p>
-				
-				<p id="sns">
-					<a href="#" target="_blank"><img src="images/iconFb.png" width="20" height="20" alt="FB"></a>
-					<a href="#" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a>
-					<a href="#" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a>
-					<a href="#" target="_blank"><img src="images/iconYouTube.png" width="20" height="20" alt="You Tube"></a>
-				</p>
-			</li>
-			<li>
-				<div id="map">
-					<!-- GOOGLE MAP -->
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3249.8456984287286!2d139.62572701525283!3d35.458614280246806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185c69af2750bd%3A0x2f02c40d622294b6!2z44CSMjIwLTAwMTIg56We5aWI5bed55yM5qiq5rWc5biC6KW_5Yy644G_44Gq44Go44G_44KJ44GE77yU5LiB55uu77yV4oiS77yT!5e0!3m2!1sja!2sjp!4v1629867745664!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-          <!-- // GOOGLE MAP -->
-				</div>
-			</li>
-		</ul>
-	</div>
-</section>
-<!-- // COMPANY -->
-
-<footer id="footer">
-<!--	Copyright(c) 2016 Sample Inc. All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank">http://f-tpl.com</a>
--->	<!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
-</footer>
-
-</body>
-</html>
+>
