--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
-    <title>XBP_HPsample</title>
+    <title>まさきのXBPポートフォリオ一覧</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <logotohome>
-    <a href="./index.html"><img src="./images/0_XBlogo.png" alt=""></a>
+    <a href="./index.html"><img src="./images/0_XBlogo.png" width="20%"></a>
     </logotohome>
     <h1>XBP</h1>
         <h2>まさきのXBPポートフォリオ一覧</h2>
