--- a/de34/2.html
+++ b/de34/2.html
@@ -10,18 +10,30 @@
 
 
 <body>
-    <h1><div style="background: #ffe4e1; border: #ffe4e1 solid 2px; font-size: 100%; padding: 20px;">第1回の課題　arduinoみたくifとloopで考える</div>
+    <h1><div style="background: #ffe4e1; border: #ffe4e1 solid 2px; font-size: 100%; padding: 20px;">
+        第2回の課題</div>
          </h1>
             
-<div>遠隔Lチカの動画リンク</div>
+<ol>
+    <li>IoTとは何か</li>
+    <li>実験した動画をYoutubeにあげて、自分のHPで見れるようにしておく</li>
+    <li>IoT(遠隔操作)で何ができそうか？グループワークした内容（ポストイット画像）</li>
+    <li>IoT(遠隔操作)で何ができそうか？自分で考えたアイディア（スケッチ）</li>
+</ol>
+    <h2>IoTとは何か</h2>
+    <div>あらゆるものをインターネット（ネットワーク）に接続する技術。<br>
+    モノのインターネットとも呼ばれる。
+    </div>
+    <h2>実験動画</h2>
+    <iframe width="750" height="422" src="https://youtube.com/shorts/j-5Mc_ucjPw?feature=share" 
+    title="ArduinoUNO 20240415" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+    <h2>IoT(遠隔操作)で何ができそうか？グループワークした内容（ポストイット画像）</h2>
+    <img src="../de34/images/20240415-1.jpg" width="50%">
+    <img src="../de34/images/20240415-2.jpg" width="50%">
 
-
-
-
-
-
-
+    <h2>IoT(遠隔操作)で何ができそうか？自分で考えたアイディア（スケッチ）</h2>
+<img src="../de34/images/20240415skech.jpg" width="50%">
 
 
 
