--- a/de34/1.html
+++ b/de34/1.html
@@ -10,9 +10,23 @@
 
 
 <body>
-    <h1><div style="background: #ffe4e1; border: #ffe4e1 solid 2px; font-size: 100%; padding: 20px;">第1回の課題　arduinoみたくifとloopで考える</div>
+    <h1><div style="background: #ffe4e1; border: #ffe4e1 solid 2px; font-size: 100%; padding: 20px;">
+     第1回の課題　arduinoみたくifとloopで考える</div>
          </h1>
-  
+     <ol>
+         <li>プログラムでモノを動かしているものにはどんなものがあるか？
+          グループワークした内容（ポストイット画像）</li>
+     <li>↑で挙げたものをプログラミング的な思考で手順を説明（ポストイット画像or記述）</li>
+     <li>プログラミングでどんなことができそうか？自分で考えたアイディア（スケッチ）</li>
+     </ol> 
+     
+     <h2>プログラムでモノを動かしているものにはどんなものがあるか？
+          グループワークした内容（ポストイット画像）</h2>
+
+<img src="../de34/images/20240408-p1.jpg" width="25%">
+<img src="../de34/images/20240408-p2.jpg" width="25%">
+
+<h2>プログラミング的な思考で手順を説明（ポストイット画像or記述）</h2>
     <div>
     ・電車のふみきり<br>
     loop・・・線路上のセンサー（感圧版とか）からの信号を受け取り続ける。<br>
@@ -23,16 +37,15 @@
 loop・・・事務所からの信号を待つ。<br>
 if・・・もし、17:00ごろになると蛍の光を流す。<br>
 if・・・もし、事務所から行方不明や防災、防犯の信号が来たらそれも流す。<br>
+</div>
 
-    
-     </div>
-
-<div>写真集</div>
+<h2>プログラミングでどんなことができそうか？自分で考えたアイディア（スケッチ）</h2>
+<img src="../de34/images/20240408-skech.jpg" width="25%">
 
 
 
 </body>
 <br>
-参考にしたサイト<br>
+<br>
 
 </html>
