--- a/de34/index.html
+++ b/de34/index.html
@@ -17,6 +17,10 @@
             <li>
                 <a href="../de34/1.html" target="_blank">課題1　arduinoみたくifとloopで考える</a>
             </li>
+            <li>
+                <a href="../de34/2.html" target="_blank">課題2　遠隔arduino</a>
+
+            </li>
         </ol>
 </body>
 </html>
