--- a/de34/2.html
+++ b/de34/2.html
@@ -27,6 +27,7 @@
     <h2>実験動画</h2>
     <iframe width="750" height="422" src="https://youtube.com/shorts/20YgQeuOSxY" 
     title="ArduinoUNO 20240415" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div>YouTubeリンク: https://youtube.com/shorts/20YgQeuOSxY</div>
 
     <h2>IoT(遠隔操作)で何ができそうか？グループワークした内容（ポストイット画像）</h2>
     <img src="../de34/images/20240415-1.jpg" width="25%">
