--- a/de34/2.html
+++ b/de34/2.html
@@ -25,7 +25,7 @@
     モノのインターネットとも呼ばれる。
     </div>
     <h2>実験動画</h2>
-    <iframe width="750" height="422" src="https://youtube.com/shorts/20YgQeuOSxY" 
+    <iframe width="" height="" src="https://youtube.com/shorts/j-5Mc_ucjPw?si=2GX5JlalfwsXO1d-" 
     title="ArduinoUNO 20240415" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <div>YouTubeリンク: https://youtube.com/shorts/20YgQeuOSxY</div>
 
