--- a/de34/2.html
+++ b/de34/2.html
@@ -25,8 +25,9 @@
     モノのインターネットとも呼ばれる。
     </div>
     <h2>実験動画</h2>
-    <iframe width="" height="" src="https://youtube.com/shorts/j-5Mc_ucjPw?si=2GX5JlalfwsXO1d-" 
-    title="ArduinoUNO 20240415" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div>
+    <iframe width="215"height="500"src="https://youtube.com/shorts/j-5Mc_ucjPw?si=B3PsHMK5PcI5Nv-Z"
+    title="ArduinoUNO"></iframe></div> 
     <div>YouTubeリンク: https://youtube.com/shorts/20YgQeuOSxY</div>
 
     <h2>IoT(遠隔操作)で何ができそうか？グループワークした内容（ポストイット画像）</h2>
