--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
         <!-- このようにするとコードとして認識されない。（メモができる）-->
     
         <!--番号付きのリスト-->
+
+        <h2>1年生後期</h2>
         <ol>
             <li><a href="./de12/index.html">デザイン演習Ⅰ・Ⅱ</a></li>
-            <li><a href="./de34/index.html">デザイン演習Ⅲ・Ⅳ</a></li>
-<br>
-
-            <li><a href="./de56/index.html">デザイン演習Ⅴ・Ⅵ</a></li>
             <li><a href="./digi_fab/index.html">デジタルファブリケーション</a></li>
+        </ol>
+
+<h2>2年生前期</h2>
+        <ol>
+            <li><a href="./de34/index.html">デザイン演習Ⅲ・Ⅳ</a></li>
+        </ol>   
+        <ol>   
+            <li><a href="./de56/index.html">デザイン演習Ⅴ・Ⅵ</a></li>
         </ol>
 
         <br>
