--- a/index.html
+++ b/index.html
@@ -34,4 +34,12 @@
         <br>
         <br>
 
->
+<footer>
+<h3>便利アプリ</h3>
+<ul>
+<li>
+    <a href="http://marginalsoft.com/tools/srctohtml/">マージナルソフト</a>
+</li>
+
+</ul>
+</footer>
