--- a/de34/index.html
+++ b/de34/index.html
@@ -19,7 +19,9 @@
             </li>
             <li>
                 <a href="../de34/2.html" target="_blank">課題2　遠隔arduino</a>
-
+            </li>
+            <li>
+                <a href="../de34/3.html" target="_blank">課題3　光センサーとarduino</a>
             </li>
         </ol>
 </body>
