--- a/de34/3.html
+++ b/de34/3.html
@@ -9,7 +9,7 @@
     </head>
     
 <body>
-<h1>暗くなると光るArduino回路</h1>    
+<h1>暗くなると光るArduinoコード</h1>    
 <code>
     <ol style="list-style:decimal-leading-zero outside;in-left:0;padding-left:36px;margin:0;background-color:#EEF;color:#000;">
     <li style="background-color:#EFF;">const int analogPin = A1; // アナログ入力ピン</li>
@@ -34,6 +34,11 @@
     <li style="background-color:#EEF;">}</li>
     <li style="background-color:#EFF;"></li>
     </ol></code>
+
+    <iframe width="215"height="500"
+    src="https://youtube.com/shorts/cLmLIJ2zUSQ?feature=share"
+    title="ArduinoUNO"></iframe></div> 
+    <div>YouTubeリンク: </div>
 
 
 
@@ -65,11 +70,11 @@
     <li style="background-color:#EFF;">#端末設定---------------------</li>
     <li style="background-color:#EEF;">#端末keyを指定してください。</li>
     <li style="background-color:#EFF;">#(これを間違えると認証されていないユーザー扱いになる。)</li>
-    <li style="background-color:#EEF;">pkey='R07yxaQUaW9JEA5m7N9O'</li>
+    <li style="background-color:#EEF;">pkey='自分の認証キー'</li>
     <li style="background-color:#EFF;">#-------------------------------------------</li>
     <li style="background-color:#EEF;"></li>
     <li style="background-color:#EFF;">#シリアルポートを入力-------------------------</li>
-    <li style="background-color:#EEF;">serial_port='/dev/tty.usbmodem11201'</li>
+    <li style="background-color:#EEF;">serial_port='シリアルポート'</li>
     <li style="background-color:#EFF;">#-------------------------------------------</li>
     <li style="background-color:#EEF;">#Arduinoとのシリアル通信設定-------------------</li>
     <li style="background-color:#EFF;">my_arduino = dfLink.set_serial(serial_port,9600)</li>
@@ -100,6 +105,13 @@
     <li style="background-color:#EEF;">#-------------------------------------------</li>
     <li style="background-color:#EFF;"></li>
     </ol></code>
+
+<h2>貯める価値があるデータとは</h2>
+<img src="../de34/images/20240422_1.jpg" width="30%">
+<img src="../de34/images/20240422_2.jpg" width="30%">
+<img src="../de34/images/20240422_3.jpg" width="30%">
+
+
 
 
 
