--- a/de34/3.html
+++ b/de34/3.html
@@ -37,13 +37,15 @@
 
     <iframe width="215"height="500"
     src="https://youtube.com/shorts/cLmLIJ2zUSQ?feature=share"
-    title="ArduinoUNO"></iframe></div> 
-    <div>YouTubeリンク: </div>
+    ></iframe></div> 
+    <div>YouTubeリンク: https://youtube.com/shorts/cLmLIJ2zUSQ?feature=share</div>
 
 
 
 <h1>データをグラフにする</h1> 
-<div></div>   
+<div>arduino→arduinoのソフト→python→サーバー
+    <br>の順でデータを流していく。
+</div>   
 <h2>ArduinoUNOのコード</h2>
     <code>
         <ol style="list-style:decimal-leading-zero outside;in-left:0;padding-left:36px;margin:0;background-color:#EEF;color:#000;">
