--- a/de34/3.html
+++ b/de34/3.html
@@ -108,7 +108,7 @@
     <li style="background-color:#EFF;"></li>
     </ol></code>
 
-<h2>貯める価値があるデータとは</h2>
+<h2>貯める価値があるデータとは？グループワーク</h2>
 <img src="../de34/images/20240422_1.jpg" width="30%">
 <img src="../de34/images/20240422_2.jpg" width="30%">
 <img src="../de34/images/20240422_3.jpg" width="30%">
