--- a/de34/3.html
+++ b/de34/3.html
@@ -36,9 +36,9 @@
     </ol></code>
 
     <iframe width="215"height="500"
-    src="https://youtube.com/shorts/cLmLIJ2zUSQ?feature=share"
+    src="https://youtu.be/MhIdzlbPBPU"
     ></iframe></div> 
-    <div>YouTubeリンク: https://youtube.com/shorts/cLmLIJ2zUSQ?feature=share</div>
+    <div>YouTubeリンク: https://youtu.be/MhIdzlbPBPU</div>
 
 
 
