--- a/de34/index.html
+++ b/de34/index.html
@@ -22,6 +22,8 @@
             </li>
             <li>
                 <a href="../de34/3.html" target="_blank">課題3　光センサーとarduino</a>
+            </li><li>
+                <a href="../de34/4.html" target="_blank">課題4　カラフルLEDとarduino</a>
             </li>
         </ol>
 </body>
