--- a/index.html
+++ b/index.html
@@ -41,5 +41,13 @@
     <a href="http://marginalsoft.com/tools/srctohtml/">マージナルソフト</a>
 </li>
 
+<h3>気付き</h3>
+<div>2024/05/13 
+    <br> ソフトウェアをVentureからSonomaに更新したせいか、
+    <br>htmlをgit repositoryにアップロード（コミットと同期）できなくなってしまった。
+    <br>しかし、Xcodeから自分のgitから更新前のデータを新たにダウンロードして、
+    <br>更新後の持っていたデータとの差分をダウンロードした更新前データに入れると無事更新できた。
+</div>
+
 </ul>
 </footer>
