--- a/de34/index.html
+++ b/de34/index.html
@@ -23,7 +23,7 @@
             <li>
                 <a href="../de34/3.html" target="_blank">課題3　光センサーとarduino</a>
             </li><li>
-                <a href="../de34/4.html" target="_blank">課題4　カラフルLEDとarduino</a>
+                <a href="../de34/4.html" target="_blank">課題4　arduinoUNO カラフルLEDとモーター</a>
             </li>
         </ol>
 </body>
