--- a/de34/4.html
+++ b/de34/4.html
@@ -3,14 +3,17 @@
 <head>
 
 
-    <title>小林正樹 2年次第1回arduinoUNOを触る</title>
+    <title>小林正樹 2年次第4回arduinoUNO LEDとモーター</title>
 
     <link rel="stylesheet" href="./css/style.css">
     </head>
+
+
     <body>
-        <a href="https://youtube.com/shorts/uGT12nTQty8?feature=sharex">血液循環音はめ</a>
         <img src="../de34/images/ArduinoUNO_code2024-05-13 16.48.11.png" width="50%">
-<div>
+<br>
+        <a href="https://youtube.com/shorts/uGT12nTQty8?feature=sharex">血液循環音はめ</a>
+        <div>
     本作品説明:心拍数(単位Hz:)を光る頻度（単位s）に変換する式をコード内に書き実行。
     <br>youtubeの脈拍動画の再生速度を別途手動で調整した。
 
