--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br> ソフトウェアをVentureからSonomaに更新したせいか、
     <br>htmlをgit repositoryにアップロード（コミットと同期）できなくなってしまった。
     <br>しかし、Xcodeから自分のgitから更新前のデータを新たにダウンロードして、
-    <br>更新後の持っていたデータとの差分をダウンロードした更新前データに入れると無事更新できた。
+    <br>更新後の持っていたデータとの差分をダウンロードした更新前データに入れると無事自分のホームページを更新できるようになった。
 </div>
 
 </ul>
