--- a/de34/index.html
+++ b/de34/index.html
@@ -22,8 +22,13 @@
             </li>
             <li>
                 <a href="../de34/3.html" target="_blank">課題3　光センサーとarduino</a>
-            </li><li>
+            </li>
+            <li>
                 <a href="../de34/4.html" target="_blank">課題4　arduinoUNO カラフルLEDとモーター</a>
+            </li>
+            <li>
+                <a href="../de34/5.html" target="_blank">課題5　コレスポンス分析
+                </a>
             </li>
         </ol>
 </body>
