--- a/de34/5.html
+++ b/de34/5.html
@@ -11,7 +11,7 @@
         <h1><div style="background: #ffe4e1; border: #ffe4e1 solid 2px; font-size: 100%; padding: 20px;">
          第5回の課題　コレスポンス分析</div>
              </h1>
-<a href="../de34/files/20240520プレゼン.pdf">今日のプレゼン</a>
+<a href="../de34/files/20240520p.pdf">今日のプレゼン</a>
 
     
 </body>
