--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <br>htmlをgit repositoryにアップロード（コミットと同期）できなくなってしまった。
     <br>しかし、Xcodeから自分のgitから更新前のデータを新たにダウンロードして、
     <br>更新後の持っていたデータとの差分をダウンロードした更新前データに入れると無事自分のホームページを更新できるようになった。
+
+<br>2024/05/20
+<br>上記の行動は参考にしない方がいいです。
 </div>
 
 </ul>
