--- a/de34/index.html
+++ b/de34/index.html
@@ -30,6 +30,12 @@
                 <a href="../de34/5.html" target="_blank">課題5　コレスポンス分析
                 </a>
             </li>
+            <li>
+                <a href="..//de34/Tinkercad.html">電子工作シュミレータTinkercad (AUTODESK)を紹介！</a>
+            </li>
+
+
+
         </ol>
 </body>
 </html>
