--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <li>
     <a href="http://marginalsoft.com/tools/srctohtml/">マージナルソフト</a>
 </li>
+<li>
+    <a href="..//de34/Tinkercad.html">【無料】電子工作シュミレータTinkercad (AUTODESK)を紹介！</a>
+</li>
+
+
 
 <h3>気付き</h3>
 <div>2024/05/13 
