--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <br>更新後の持っていたデータとの差分をダウンロードした更新前データに入れると無事自分のホームページを更新できるようになった。
 
 <br>2024/05/20
-<br>上記の行動は参考にしない方がいいです。
+<br>上記の行動は参考にしない方がいいです。Githubのリポジトリが複雑になって頭バグります。
 </div>
 
 </ul>
