--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h3>便利アプリ</h3>
 <ul>
 <li>
-    <a href="http://marginalsoft.com/tools/srctohtml/">マージナルソフト</a>
+    <a href="http://marginalsoft.com/tools/srctohtml/">【無料】マージナルソフト</a>
 </li>
 <li>
     <a href="..//de34/Tinkercad.html">【無料】電子工作シュミレータTinkercad (AUTODESK)を紹介！</a>
