--- a/de34/index.html
+++ b/de34/index.html
@@ -33,7 +33,10 @@
             <li>
                 <a href="..//de34/Tinkercad.html">【無料】電子工作シュミレータTinkercad (AUTODESK)を紹介！</a>
             </li>
-
+            <li>
+                <a href="../de34/final.html" target="_blank">最終課題　LEDルーレット目押し 紹介動画
+                </a>
+            </li>
 
 
         </ol>
