--- a/de34/final.html
+++ b/de34/final.html
@@ -20,4 +20,12 @@
 </div>
     <a href="https://www.youtube.com/watch?v=c8CCxS4D13s">
         URLリンク：　https://www.youtube.com/watch?v=c8CCxS4D13s</a>
+
+        <div>想定してるストーリー動画
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/J2KrhAWprqk?si=YNQ2bvVzhjiAGsf2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<a href="https://www.youtube.com/watch?v=J2KrhAWprqk">
+    URLリンク：　https://www.youtube.com/watch?v=J2KrhAWprqk
+</a>
+
+        </div>
 </body>
