--- a/de56/index.html
+++ b/de56/index.html
@@ -10,7 +10,19 @@
     <logotohome>
     <a href="../index.html"><img src="./images/0_XBlogo.png" alt=""></a>
     </logotohome>
-    <h1>デザイン演習Ⅴ・Ⅵ</h1>
+    <h1>小林正樹 デザイン演習Ⅴ・Ⅵ</h1>
+
+    <div>
+        <a href="../de56/1.html">1.html</a>
+        <a href="../de56/1.html">1.html</a>
+        <a href="../de56/1.html">1.html</a>
+        <a href="../de56/1.html">1.html</a>
+        <a href="../de56/1.html">1.html</a>
+        <a href="../de56/1.html">1.html</a>
+        <a href="../de56/1.html">1.html</a>
+        <a href="../de56/2.html">2.html</a>
+
+    </div>
 
 
 
