--- a/de56/1.html
+++ b/de56/1.html
@@ -6,10 +6,50 @@
     <title>小林正樹　de56</title>
 
     <link rel="stylesheet" href="./css/style.css">
-    </head>
+</head>
+<body>
+    <h1>小林正樹 de56 1回目</h1>
+        <div id = homework>
+            <a href="https://kuxbp.github.io/xbp/xbp2023/design_e34/#:~:text=%E5%93%A1%E3%81%A8%E3%81%AA%E3%82%8A%E3%81%BE%E3%81%99%E3%80%82-,%2D%2D%EF%BC%88%E5%AE%BF%E9%A1%8C%EF%BC%89HP%E4%BD%9C%E6%88%90%2D%2D,-%E3%81%84%E3%81%A4%E3%82%82%E3%81%AE%E3%82%88%E3%81%86">
+            初回授業までの宿題</a><br>
+            ↑https://kuxbp.github.io/xbp/xbp2023/design_e34/の宿題の項目に飛びます）
+            <br>
+            20240725時点での宿題<br>
+            <img src="../de56/images/de56Homework.png" width="50%"><br>
+            <br>
+            宿題1 HP作成<br>
+            de56用にWebページを作ること<br><br>
+            <span class=under2>宿題2 仲間探し<br>
+            1チーム4名まで。夏休みのうちに仲間を見つけておく。<br><br>
+            世の中に存在する課題の発見<br>
+            夏休みにいろいろと世の中を観察し、社会に存在する大小様々な課題を発見し、ビジネスを通して解決したい課題を考えて、<br>
+            各人スケッチをデザイン演習5のHPに最初の授業までにアップしておいてください。
+            <br>あくまで案で結構です。<br><br>
+            <b><span class=under1>これをやっていないと、デザイン演習5の成績はつきません。
 
-    <body>
+            </b>
+            </span>
+            </span>
+            <!--span classのカラフルな下線はcss絡みで収拾つかなそうなので放置-->
+           </div>
+</body>
 
-        <h1>小林正樹 de56 1回目</h1>
 
-    </body>
+
+
+<footer>
+    <div id =column>
+            <h2>コラム的なアレ: 指定したいのリンクの指定のリンクに飛ばす方法</h2>
+            <br>
+            <img src="../de56/images/selectUrl.png" width="50%"><br>
+            ↑「選択箇所へのリンクをコピー」を押して、自分の.htmlに貼り付けるだけ！<br>
+            （この機能はchrome、Microsoft edgeならある）<br>
+            <br>
+            詳しくはこちらのサイトをご覧ください。<br>
+            <a href="https://ysfactory.net/column/how-to-create-a-link/">
+                鶴岡製作所コラム2023.11.7専門知識は不要！ページの途中、スクロールしないとたどり着けない「特定の場所」に直接飛ばすURLの作り方
+            </a>
+            <br>
+               URL: https://ysfactory.net/column/how-to-create-a-link/
+    </div>
+</footer>
