--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="./de34/index.html">デザイン演習Ⅲ・Ⅳ</a></li>
         </ol> 
         
- <h2>未定</h2>       
+ <h2>2年生後期</h2>       
         <ol>   
             <li><a href="./de56/index.html">デザイン演習Ⅴ・Ⅵ</a></li>
         </ol>
