--- a/de56/1.html
+++ b/de56/1.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>小林正樹 de56 1回目</h1>
+    <h1>小林正樹 de56 1回目 宿題「世の中に存在する課題の発見」</h1>
+    <h2>宿題について</h2>
         <div id = homework>
             <a href="https://kuxbp.github.io/xbp/xbp2023/design_e34/#:~:text=%E5%93%A1%E3%81%A8%E3%81%AA%E3%82%8A%E3%81%BE%E3%81%99%E3%80%82-,%2D%2D%EF%BC%88%E5%AE%BF%E9%A1%8C%EF%BC%89HP%E4%BD%9C%E6%88%90%2D%2D,-%E3%81%84%E3%81%A4%E3%82%82%E3%81%AE%E3%82%88%E3%81%86">
             初回授業までの宿題</a><br>
@@ -19,18 +20,25 @@
             <br>
             宿題1 HP作成<br>
             de56用にWebページを作ること<br><br>
+
             <span class=under2>宿題2 仲間探し<br>
             1チーム4名まで。夏休みのうちに仲間を見つけておく。<br><br>
-            世の中に存在する課題の発見<br>
+
+            宿題3 世の中に存在する課題の発見<br>
             夏休みにいろいろと世の中を観察し、社会に存在する大小様々な課題を発見し、ビジネスを通して解決したい課題を考えて、<br>
             各人スケッチをデザイン演習5のHPに最初の授業までにアップしておいてください。
             <br>あくまで案で結構です。<br><br>
+                <!--即死魔法 "成績つかない" -->
             <b><span class=under1>これをやっていないと、デザイン演習5の成績はつきません。
-
             </b>
             </span>
             </span>
             <!--span classのカラフルな下線はcss絡みで収拾つかなそうなので放置-->
+
+            <h2>宿題「世の中に存在する課題の発見」</h2>
+            <br>
+            スケッチ↓
+            <img src="" alt="" width="50%">
            </div>
 </body>
 
