--- a/de56/1.html
+++ b/de56/1.html
@@ -37,8 +37,9 @@
 
             <h2>宿題「世の中に存在する課題の発見」</h2>
             <br>
-            スケッチ↓
-            <img src="" alt="" width="50%">
+            スケッチ↓<br>
+            <img src="../de56/images/de56-1skech.jpg" alt="" width="50%"><br>
+            各家庭個人に個人に自身が消費した電力を教えるサービス<br>
            </div>
 </body>
 
