--- a/de34/final.html
+++ b/de34/final.html
@@ -3,7 +3,7 @@
 <head>
 
 
-    <title>de34 最終課題 LEDルーレット目押し</title>
+    <title>de34 最終課題Project Note LEDルーレット目押し</title>
 
     <link rel="stylesheet" href="./css/style.css">
     <style>
@@ -53,6 +53,7 @@
         }
     </style>
 </head>
+<!--本文開始ーーーーーーーー！！-->
 <body>
     <h1>de34 最終課題 LEDルーレット目押し</h1>
     
@@ -90,7 +91,25 @@
             URLリンク：　https://youtube.com/shorts/6ymzHCkK1RA?si=cVBB5Xwymp6YdlqA
 
             <!--ここで.mp4ファイルがいくつもde34でリポジトリにあげられていたことに気づく。あかん。-->
-    </div>        
+    </div>      
+    <!--de34の説明文に沿って記入-->
+    <h2>Project Noteプロセスメモ</h2>
+    <div>
+    ■　⇒考えること、疑問など<br>
+    ●　⇒具体的なやること<br>
+    ▶　⇒やったこと<br>
+    <br>   
+    <br>■カーテンを自動開閉する装置を作ろう。何が必要だろうか。
+    <br>カーテンを動かすモーターが必要だ。
+    <br>●ステッピングモーターを買おう。
+    <br>▶ステッピングモーター(28BYJ-48)を購入。
+    <br>
+    <img src="../de34/images/images_de34_final/step28BYJ-48.png" width="20%" >
+
+    <br>ここで緑の基盤のような部分に何のPINを挿せばいいか迷い、停滞。
+    <br>危機を感じ、同時に次の作品も開始。
+
+    </div>
     <div id = fieldwork>
     <h2>フィールドワーク</h2>
     <h3>エジソンプラザことタック電子へ</h3>
