--- a/de34/index.html
+++ b/de34/index.html
@@ -37,8 +37,17 @@
                 <a href="../de34/final.html" target="_blank">最終課題　LEDルーレット目押し 紹介動画
                 </a>
             </li>
-
-
+        </ol>
+        <ol>
+            <h2>チームメンバーのProject Note</h2>
+            <li>
+            <a href="https://kyarafull-kakigori.github.io/xbp/de34/de34.5.html">
+                カラフルかき氷 さんのプロジェクトノート</a>
+            </li>
+            <li>
+            <a href="https://memo5874.github.io/xbp/de34/projectnote.html">
+                    memo さんのプロジェクトノート</a>
+            </li>
         </ol>
 </body>
 </html>
