蛇足かどうかは後でわかる

--- a/de34/final.html
+++ b/de34/final.html
@@ -110,7 +110,7 @@
     <br>ここで緑の基盤のような部分に何のPINを挿せばいいか迷い、停滞。
     <br>未完成の危機を感じ、同時に次の作品も開始。
     <br>(その後オスオスではないオスメスのジャンパーワイヤーを発見、<br>
-    購入しモーターが動くようになった。)br
+    購入しモーターが動くようになった。) <br>
     その時のコード⬇︎<br>
     <img src="../de34/images/images_de34_final/step28code.png" width="50%" >
     <br>
@@ -141,9 +141,11 @@
         4.それをジャンパーワイヤーを介し、回路全体に信号を送る。<br>
         5.その結果をPCのシリアルポートに送信<br>
         のような反応を起こせず。断念。<br>
+        <br>その時のIDEのコード⬇︎<br>
         <br><img src="../de34/images/images_de34_final/esp3266code.png" width="50%">
 
-        
+<br>
+        <h3>ついに原点回帰にして起死回生のLチカ応用作品爆誕</h3>
         ■メンバーの一人がパチスロの目押しが上手くなりたいとのことで<br>
         aruduinoでLチカを七つ作ってそれを3つ<br>
         用意することでスロットの目押しようなあそびができるものをつくる。
