--- a/de34/final.html
+++ b/de34/final.html
@@ -349,7 +349,7 @@
 <b>電圧V（一定）＝電流I（変動）×抵抗Ω（抵抗器次第）</b><br>
 を、抵抗器を100Ω、1kΩ、5kΩ、10kΩなどを使って改めて実感した。
 <br>
-
+<a href="../de34/files/デザイン演習34最終課題発表.pptx">デザイン演習34最終課題発表.pptx</a>
 
 <br>
     
