--- a/de34/final.html
+++ b/de34/final.html
@@ -66,7 +66,9 @@
     <!--width="560+56*5"とやってみたが、変わらなかった。
     htmlには計算能力はないのかも-->
         <iframe width="720" height="400" src="https://www.youtube.com/embed/c8CCxS4D13s?si=4U9ETKGpkPUzvDGw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <br>
+    <!--動画に透かしで名前や権利を入れておく方がいいかも-->
+    
+        <br>
     見れない方は
     <a href="https://www.youtube.com/watch?v=c8CCxS4D13s">こちら</a>
     から!<br>
