--- a/de34/final.html
+++ b/de34/final.html
@@ -74,6 +74,7 @@
     URLリンク：　https://www.youtube.com/watch?v=c8CCxS4D13s
     <br>
 
+
     <h2>想定してるストーリー動画</h2>
             <iframe width="720" height="400" src="https://www.youtube.com/embed/J2KrhAWprqk?si=YNQ2bvVzhjiAGsf2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <!--動画に透かしで名前や権利を入れておく方がいいかも-->
@@ -152,6 +153,9 @@
         ■メンバーの一人がパチスロの目押しが上手くなりたいとのことで<br>
         aruduinoでLチカを七つ作ってそれを3つ<br>
         用意することでスロットの目押しようなあそびができるものをつくる。
+        イメージ⬇︎<br>
+        <img src="../de34/images/images_de34_final/slot_img.jpg" width="50%">
+
         ●以下のものを用意した。
         LED7*3、<br>
         ブレッドボード*3 <br>
