--- a/de34/final.html
+++ b/de34/final.html
@@ -152,10 +152,10 @@
         <h3>ついに原点回帰にして起死回生のLチカ応用作品爆誕</h3>
         ■メンバーの一人がパチスロの目押しが上手くなりたいとのことで<br>
         aruduinoでLチカを七つ作ってそれを3つ<br>
-        用意することでスロットの目押しようなあそびができるものをつくる。
+        用意することでスロットの目押しようなあそびができるものをつくる。<br>
         イメージ⬇︎<br>
         <img src="../de34/images/images_de34_final/slot_img.jpg" width="50%">
-
+<br>
         ●以下のものを用意した。
         LED7*3、<br>
         ブレッドボード*3 <br>
