--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
  <h2>2年生後期</h2>       
         <ol>   
-            <li><a href="./de56/index.html">デザイン演習Ⅴ・Ⅵ</a></li>
+            <li><a href="./de5/index.html">デザイン演習Ⅴ</a></li>
         </ol>
 
         <br>
