--- a/de5/1.html
+++ b/de5/1.html
@@ -3,12 +3,12 @@
 <head>
 
 
-    <title>小林正樹　de56</title>
+    <title>小林正樹　de5</title>
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>小林正樹 de56 1回目 宿題「世の中に存在する課題の発見」</h1>
+    <h1>小林正樹 de5 1回目 宿題「世の中に存在する課題の発見」</h1>
     <h2>宿題について</h2>
         <div id = homework>
             <a href="https://kuxbp.github.io/xbp/xbp2023/design_e34/#:~:text=%E5%93%A1%E3%81%A8%E3%81%AA%E3%82%8A%E3%81%BE%E3%81%99%E3%80%82-,%2D%2D%EF%BC%88%E5%AE%BF%E9%A1%8C%EF%BC%89HP%E4%BD%9C%E6%88%90%2D%2D,-%E3%81%84%E3%81%A4%E3%82%82%E3%81%AE%E3%82%88%E3%81%86">
@@ -16,10 +16,10 @@
             ↑https://kuxbp.github.io/xbp/xbp2023/design_e34/の宿題の項目に飛びます）
             <br>
             20240725時点での宿題<br>
-            <img src="../de56/images/de56Homework.png" width="50%"><br>
+            <img src="../de5/images/de56Homework.png" width="50%"><br>
             <br>
             宿題1 HP作成<br>
-            de56用にWebページを作ること<br><br>
+            de5用にWebページを作ること<br><br>
 
             <span class=under2>宿題2 仲間探し<br>
             1チーム4名まで。夏休みのうちに仲間を見つけておく。<br><br>
@@ -38,7 +38,7 @@
             <h2>宿題「世の中に存在する課題の発見」</h2>
             <br>
             スケッチ↓<br>
-            <img src="../de56/images/de56-1skech.jpg" alt="" width="50%"><br>
+            <img src="../de5/images/de56-1skech.jpg" alt="" width="50%"><br>
             各家庭個人に個人に自身が消費した電力を教えるサービス<br>
            </div>
 </body>
