--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
         </ol> 
         
  <h2>2年生後期</h2>       
-        <ol>   
+        <ol> 
+              
             <li><a href="./de5/index.html">デザイン演習Ⅴ</a></li>
+            <li><a href="./de5_ver.art2.1/index.html"></a></li>
         </ol>
+
+
 
         <br>
         <br>
