--- a/art/index.html
+++ b/art/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>de5 art版</title>
+<title>アーティスト(画家・作家・音楽家・芸能人など)向け 無料ホームページテンプレート tp_artist2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <link rel="stylesheet" href="css/style.css">
@@ -11,8 +11,7 @@
 
 <header>
 
-<h1 id="logo"><img src="./images/0_XBlogo.png" alt="Artist Web Site">
-    <span>アーティストウェブサイト</span></h1>
+<h1 id="logo"><img src="images/logo.png" alt="Artist Web Site"><span>アーティストウェブサイト</span></h1>
 
 <!--開閉ブロック-->
 <div id="menubar">
@@ -70,12 +69,44 @@
 
 
 
-<!-- ここからsection3 消した -->
+<!-- ここからsection3 -->
+<section id="section3" class="section">
+
+<h2>Activity Report</h2>
+<p>これはsection3のコンテンツです。</p>
+
+<dl class="new">
+
+<dt>2024/05/16<span>その他</span></dt>
+<dd>htmlの最後のタグ数行がおかしくなってしまっていました。既にご利用中のお客様は最新テンプレをDLして頂き、htmlの下の数行部分を入れ替えて下さい。</dd>
+
+<dt>2024/05/05<span>その他</span></dt>
+<dd>css冒頭の設定が、「body &gt; * {box-sizing: border-box;}」となっておりましたが、「body * {box-sizing: border-box;}」に修正。</dd>
+
+<dt>2024/05/02<span>その他</span></dt>
+<dd>アーティスト(画家・作家・音楽家・芸能人など)向け 無料ホームページテンプレート tp_artist2公開。</dd>
+
+<dt>2024/04/10<span>メディア</span></dt>
+<dd>地元メディアへ掲載。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
+
+<dt>2024/01/29<span>メディア</span></dt>
+<dd>雑誌インタビューが掲載されました。サンプルテキスト。</dd>
+
+<dt>2023/12/25<span>イベント</span></dt>
+<dd>イベントを開催。サンプルテキスト。サンプルテキスト。</dd>
+
+<dt>2023/12/01<span>お知らせ</span></dt>
+<dd>webサイトを公開しました。</dd>
+
+</dl>
+
+<a href="https://q19cms.com/files_m/file/cms_oshirase.html" target="_blank"><img src="https://template-party.com/file/images/cms_oshirase/banner_oshirase_cms2.jpg" alt="無料で使えるお知らせCMSのご案内"></a>
+
+</section>
 
 
 
-
-<!-- ここからsection4　消した -->
+<!-- ここからsection4 -->
 <section id="section4" class="section">
 
 <h2>Gallery</h2>
