--- a/de5/index.html
+++ b/de5/index.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
-    <title>XBPデザイン演習Ⅴ・Ⅵ</title>
+    <title>XBPデザイン演習Ⅴ</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/xbp.ico">
 </head>
@@ -10,7 +10,7 @@
     <logotohome>
     <a href="../index.html"><img src="./images/0_XBlogo.png" alt=""></a>
     </logotohome>
-    <h1>小林正樹 デザイン演習Ⅴ・Ⅵ</h1>
+    <h1>小林正樹 デザイン演習Ⅴ</h1>
 
     <div>
         <li>
