--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     </logotohome>
     <h1>XBP</h1>
         <h2>まさきのXBPポートフォリオ一覧</h2>
+        <div>
+        おしゃれ版は<a href="../xbp/art/index.html">こちら</a>
+        </div>
         <!-- このようにするとコードとして認識されない。（メモができる）-->
     
         <!--番号付きのリスト-->
