--- a/art/index.html
+++ b/art/index.html
@@ -2,16 +2,17 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>アーティスト(画家・作家・音楽家・芸能人など)向け 無料ホームページテンプレート tp_artist2</title>
+<title>まさきのXBPポートフォリオ一覧</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+<!--下のheaderは本文ではない部分-->
 <header>
 
-<h1 id="logo"><img src="images/logo.png" alt="Artist Web Site"><span>アーティストウェブサイト</span></h1>
+<h1 id="logo"><img src="../images/0_XBlogo.png" alt="Artist Web Site"><span>小林正樹のXBP</span></h1>
 
 <!--開閉ブロック-->
 <div id="menubar">
@@ -37,70 +38,31 @@
 
 </header>
 
+<!--本文開始-->
 <main>
 
-
+<h1>小林正樹のXBPポートフォリオ</h1>
 
 <!-- ここからsection1 -->
 <section id="section1" class="section">
+    <h2>デザイン演習Ⅰ・Ⅱ</h2>
+    <a href="../de12/index.html"><img src="" alt="de12" width="" srcset=""></a>
 </section>
 
 
 
 <!-- ここからsection2 -->
 <section id="section2" class="section">
-
-<h2>Profile</h2>
-<p>これはsection2のコンテンツです。</p>
-
-<h2>テンプレートのご利用前に必ずお読み下さい</h2>
-
-<h3>利用規約のご案内</h3>
-<p>このテンプレートは、<a href="https://template-party.com/">Template Party</a>にて無料配布している『アーティスト(画家・作家・音楽家・芸能人など)向け 無料ホームページテンプレート tp_artist2』です。必ずダウンロード先のサイトの<a href="https://template-party.com/read.html">利用規約</a>をご一読の上でご利用下さい。</p>
-<h3>HP最下部の著作表示『Web Design:Template-Party』は無断で削除しないで下さい。</h3>
-<p>わざと見えなく加工する事も禁止です。</p>
-<h3>下部の著作を外したい場合は</h3>
-<p><a href="https://template-party.com/">Template-Party</a>の<a href="https://template-party.com/member.html">ライセンス契約</a>を行う事でHP下部の著作を外す事ができます。</p>
-
-<h3>当テンプレートの詳しい使い方は</h3>
-<p><a href="about.html">こちらをご覧下さい。</a></p>
-
+    <h2>デザイン演習Ⅲ・Ⅳ</h2>
+    <a href="../de34/index.html"><img src="" alt="de34" width="" srcset=""></a>
 </section>
 
 
 
 <!-- ここからsection3 -->
 <section id="section3" class="section">
-
-<h2>Activity Report</h2>
-<p>これはsection3のコンテンツです。</p>
-
-<dl class="new">
-
-<dt>2024/05/16<span>その他</span></dt>
-<dd>htmlの最後のタグ数行がおかしくなってしまっていました。既にご利用中のお客様は最新テンプレをDLして頂き、htmlの下の数行部分を入れ替えて下さい。</dd>
-
-<dt>2024/05/05<span>その他</span></dt>
-<dd>css冒頭の設定が、「body &gt; * {box-sizing: border-box;}」となっておりましたが、「body * {box-sizing: border-box;}」に修正。</dd>
-
-<dt>2024/05/02<span>その他</span></dt>
-<dd>アーティスト(画家・作家・音楽家・芸能人など)向け 無料ホームページテンプレート tp_artist2公開。</dd>
-
-<dt>2024/04/10<span>メディア</span></dt>
-<dd>地元メディアへ掲載。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-
-<dt>2024/01/29<span>メディア</span></dt>
-<dd>雑誌インタビューが掲載されました。サンプルテキスト。</dd>
-
-<dt>2023/12/25<span>イベント</span></dt>
-<dd>イベントを開催。サンプルテキスト。サンプルテキスト。</dd>
-
-<dt>2023/12/01<span>お知らせ</span></dt>
-<dd>webサイトを公開しました。</dd>
-
-</dl>
-
-<a href="https://q19cms.com/files_m/file/cms_oshirase.html" target="_blank"><img src="https://template-party.com/file/images/cms_oshirase/banner_oshirase_cms2.jpg" alt="無料で使えるお知らせCMSのご案内"></a>
+    <h2>デザイン演習Ⅴ</h2>
+    <a href="../de5/index.html"><img src="" alt="de5" width="" srcset=""></a>
 
 </section>
 
@@ -109,125 +71,8 @@
 <!-- ここからsection4 -->
 <section id="section4" class="section">
 
-<h2>Gallery</h2>
-<p>これはsection4のコンテンツです。</p>
-
-<p>ここのサムネイル画像は、長方形であっても正方形にトリミングされるようになっています。<br>
-リンク（aタグ）を指定しないと画像が表示されないので注意して下さい。<br>
-もし、リンクを一切使わずサムネイルだけ出しておきたいなら、aタグをdivタグに置き換えて（&lt;div&gt;〜&lt;/div&gt;）、style.cssの<br>
-.list-grid-trimming .list aを、.list-grid-trimming .list divにすればOKです。</p>
-<p>現在４列ですが、５列や３列に簡単に変更できます。詳しくは、cssフォルダのstyle.cssの<br>
-.list-grid-trimming {<br>
-のブロック内の説明を読んで下さい。</p>
-
-<div class="list-grid-trimming">
-
-<div class="list">
-<a href="images/section1.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section1.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section2.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section2.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section3.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section3.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section1.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section1.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section2.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section2.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section3.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section3.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section1.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section1.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section2.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section2.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section3.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section3.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section1.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section1.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section2.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section2.jpg" alt="">
-</a>
-</div>
-
-<div class="list">
-<a href="images/section3.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section3.jpg" alt="">
-</a>
-</div>
-
-</div>
-<!--/.list-grid-->
-
-<h3>lightboxを使用しています</h3>
-<p>サムネイル画像をクリックすると、画面が暗転してポップアップが開きます。<br>
-海外で配布されているプログラムなので、カスタマイズなどには当サイトでは対応していません。ご自身でGoogle検索などかけてみて下さい。</p>
-<h3>画像を増やしたい場合</h3>
-<p>基本的にはご利用のテンプレートのhtml側のパーツをコピペして増やしてみて下さい。<br>
-以下のタグのようにポップアップで大きく表示される画像はaタグ内で読み込み、サムネイル画像（小さな画像）はimgタグで読み込まれています。<br>
-このテンプレートではどちらの画像も同じ画像を使っていますが、それぞれ別の画像を配置して頂いても構いません。</p>
-<p class="look">&lt;a href=&quot;<span class="color-check">images_gallery/1.jpg</span>&quot; data-lightbox=&quot;group1&quot; data-title=&quot;タイトルをここに入れます&quot;&gt;<br>
-&lt;img src=&quot;<span class="color-check">images_gallery/1.jpg</span>&quot; alt=&quot;&quot;&gt;<br>
-&lt;/a&gt;</p>
-<h3>グループ</h3>
-<p><span class="look">data-lightbox="group1"</span><br>
-は、ポップアップで表示した場合に次の画像へ繋ぐグループの設定です。<br>
-「group1」部分は好きに変更して頂いて構いません。<br>
-同じグループ名がついている場合に次の画像へのリンク矢印が出ます。グループごとに見て欲しい場合はこのグループ名を変更しておくといいでしょう。</p>
-<p class="look">&lt;a href=&quot;images_gallery/1.jpg&quot; <span class="color-check">data-lightbox=&quot;group1&quot;</span> data-title=&quot;タイトルをここに入れます&quot;&gt;<br>
-&lt;img src=&quot;images_gallery/1.jpg&quot; alt=&quot;&quot;&gt;<br>
-&lt;/a&gt;</p>
-<h3>ポップアップ時のコメント</h3>
-<p><span class="look">data-title="タイトルをここに入れます"</span><br>
-は、lightboxで暗転表示された際に写真下に表示されるテキストです。<br>
-よく分からない場合は実際に設定して動作を確認してみて下さい。不要ならタグごと削除してもらえばOKです。</p>
-<p class="look">&lt;a href=&quot;images_gallery/1.jpg&quot; data-lightbox=&quot;group1&quot; <span class="color-check">data-title=&quot;タイトルをここに入れます&quot;</span>&gt;<br>
-&lt;img src=&quot;images_gallery/1.jpg&quot; alt=&quot;&quot;&gt;<br>
-&lt;/a&gt;</p>
-
-<h3>lightboxを使う為に必要なタグ、ファイル類。</h3>
-<p>cssフォルダのstyle.css冒頭で読み込んでいる「lightbox.cssの読み込み」のブロック。<br>
-html下部で読み込んでいる「lightbox用jsファイルの読み込み」のブロック。</p>
-<p>何年も経過した場合、動作に問題が出てくる可能性があります。<br>
-テンプレートを編集していないのに突然動きがおかしくなった場合は、上記のバージョンを変更して動作するか確認してみて下さい。</p>
+<h2>デジタルファブリケーション</h2>
+<a href="../digi_fab/index.html"><img src="" alt="digi_fab" width="" srcset=""></a>
 
 </section>
 
