--- a/art/index.html
+++ b/art/index.html
@@ -46,7 +46,7 @@
 <!-- ここからsection1 -->
 <section id="section1" class="section">
     <h2>デザイン演習Ⅰ・Ⅱ</h2>
-    <a href="../de12/index.html"><img src="" alt="de12" width="" srcset=""></a>
+    <a href="../de12/index.html"><img src="../images/de12_daijest.png" alt="de12" width="" srcset=""></a>
 </section>
 
 
