--- a/art/index.html
+++ b/art/index.html
@@ -54,7 +54,7 @@
 <!-- ここからsection2 -->
 <section id="section2" class="section">
     <h2>デザイン演習Ⅲ・Ⅳ</h2>
-    <a href="../de34/index.html"><img src="" alt="de34" width="" srcset=""></a>
+    <a href="../de34/index.html"><img src="../images/de34_daijest.png" alt="de34" width="" srcset=""></a>
 </section>
 
 
