--- a/art/index.html
+++ b/art/index.html
@@ -45,24 +45,24 @@
 
 <!-- ここからsection1 -->
 <section id="section1" class="section">
-    <h2>デザイン演習Ⅰ・Ⅱ</h2>
-    <a href="../de12/index.html"><img src="../images/de12_daijest.png" alt="de12" width="" srcset=""></a>
+    <a href="../de12/index.html"><h2>デザイン演習Ⅰ・Ⅱ</h2></a>
+    <a href="../de12/index.html"><img src="../images/de12_daijest.png" alt="de12" width="50%" srcset=""></a>
 </section>
 
 
 
 <!-- ここからsection2 -->
 <section id="section2" class="section">
-    <h2>デザイン演習Ⅲ・Ⅳ</h2>
-    <a href="../de34/index.html"><img src="../images/de34_daijest.png" alt="de34" width="" srcset=""></a>
+    <a href="../de34/index.html"><h2>デザイン演習Ⅲ・Ⅳ</h2></a>
+    <a href="../de34/index.html"><img src="../images/de34_daijest.png" alt="de34" width="50%" srcset=""></a>
 </section>
 
 
 
 <!-- ここからsection3 -->
 <section id="section3" class="section">
-    <h2>デザイン演習Ⅴ</h2>
-    <a href="../de5/index.html"><img src="" alt="de5" width="" srcset=""></a>
+    <a href="../de5/index.html"><h2>デザイン演習Ⅴ</h2></a>
+    <a href="../de5/index.html"><img src="../images/" alt="de5" width=50%" srcset=""></a>
 
 </section>
 
@@ -71,8 +71,8 @@
 <!-- ここからsection4 -->
 <section id="section4" class="section">
 
-<h2>デジタルファブリケーション</h2>
-<a href="../digi_fab/index.html"><img src="" alt="digi_fab" width="" srcset=""></a>
+<a href="../digi_fab/index.html"><h2>デジタルファブリケーション</h2>
+<a href="../digi_fab/index.html"><img src="../images/digi_fab_daijest.png" alt="digi_fab" width="50%" srcset=""></a>
 
 </section>
 
