--- a/art/index.html
+++ b/art/index.html
@@ -19,10 +19,10 @@
 
 <nav>
 <ul>
-<li><a href="#">Home</a></li>
-<li><a href="#section2">Profile</a></li>
-<li><a href="#section3">Activity Report</a></li>
-<li><a href="#section4">Gallery</a></li>
+<li><a href="#">デザイン演習Ⅰ・Ⅱ</a></li>
+<li><a href="#section2">デジタルファブリケーション</a></li>
+<li><a href="#section3">デザイン演習Ⅲ・Ⅳ</a></li>
+<li><a href="#section4">デザイン演習</a></li>
 </ul>
 </nav>
 
@@ -74,7 +74,7 @@
 
 <section id="section4" class="section">
     <a href="../de5/index.html"><h2>デザイン演習Ⅴ</h2></a>
-    <a href="../de5/index.html"><img src="../images/" alt="de5" width=50%" srcset=""></a>
+    <a href="../de5/index.html"><img src="../images/white.png" alt="de5" width=50%" srcset=""></a>
 
 </section>
 
