--- a/art/index.html
+++ b/art/index.html
@@ -22,7 +22,7 @@
 <li><a href="#">デザイン演習Ⅰ・Ⅱ</a></li>
 <li><a href="#section2">デジタルファブリケーション</a></li>
 <li><a href="#section3">デザイン演習Ⅲ・Ⅳ</a></li>
-<li><a href="#section4">デザイン演習</a></li>
+<li><a href="#section4">デザイン演習Ⅴ</a></li>
 </ul>
 </nav>
 
