--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--下のheaderは本文ではない部分-->
 <header>
 
-<h1 id="logo"><img src="../images/0_XBlogo.png" alt="Artist Web Site"><span>小林正樹のXBP</span></h1>
+<h1 id="logo"><img src="../images/0_XBlogo.png" alt="小林正樹のXBP"><span>小林正樹のXBP</span></h1>
 
 <!--開閉ブロック-->
 <div id="menubar">
