--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--下のheaderは本文ではない部分-->
 <header>
 
-<h1 id="logo"><img src="../images/0_XBlogo.png" alt="小林正樹のXBP"><span>小林正樹のXBP</span></h1>
+<h1 id="logo"><img src="../xbp/images/0_XBlogo.png" alt="小林正樹のXBP"><span>小林正樹のXBP</span></h1>
 
 <!--開閉ブロック-->
 <div id="menubar">
@@ -46,7 +46,7 @@
 <!-- ここからsection1 -->
 <section id="section1" class="section">
     <a href="../de12/index.html"><h2>デザイン演習Ⅰ・Ⅱ</h2></a>
-    <a href="../de12/index.html"><img src="../images/de12_daijest.png" alt="de12" width="50%" srcset=""></a>
+    <a href="../de12/index.html"><img src="../xbp/images/de12_daijest.png" alt="de12" width="50%" srcset=""></a>
 </section>
 
 
@@ -55,7 +55,7 @@
 
 <section id="section2" class="section">
     <a href="../digi_fab/index.html"><h2>デジタルファブリケーション</h2>
-    <a href="../digi_fab/index.html"><img src="../images/digi_fab_daijest3.png" alt="digi_fab" width="50%" srcset=""></a>
+    <a href="../digi_fab/index.html"><img src="../xbp/images/digi_fab_daijest3.png" alt="digi_fab" width="50%" srcset=""></a>
     
     </section>
 
@@ -65,7 +65,7 @@
 
 <section id="section3" class="section">
     <a href="../de34/index.html"><h2>デザイン演習Ⅲ・Ⅳ</h2></a>
-    <a href="../de34/index.html"><img src="../images/de34_daijest.png" alt="de34" width="50%" srcset=""></a>
+    <a href="../de34/index.html"><img src="../xbp/images/de34_daijest.png" alt="de34" width="50%" srcset=""></a>
 </section>
 
 
@@ -74,7 +74,7 @@
 
 <section id="section4" class="section">
     <a href="../de5/index.html"><h2>デザイン演習Ⅴ</h2></a>
-    <a href="../de5/index.html"><img src="../images/white.png" alt="de5" width=50%" srcset=""></a>
+    <a href="../de5/index.html"><img src="../xbp/images/white.png" alt="de5" width=50%" srcset=""></a>
 
 </section>
 
