--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 <!-- ここからsection1 -->
 <section id="section1" class="section">
-    <a href="../de12/index.html"><h2>デザイン演習Ⅰ・Ⅱ</h2></a>
-    <a href="../de12/index.html"><img src="../xbp/images/de12_daijest.png" alt="de12" width="50%" srcset=""></a>
+    <a href="../xbp/de12/index.html"><h2>デザイン演習Ⅰ・Ⅱ</h2></a>
+    <a href="../xbp/de12/index.html"><img src="../xbp/images/de12_daijest.png" alt="de12" width="50%" srcset=""></a>
 </section>
 
 
@@ -54,8 +54,8 @@
 <!-- ここからsection2 -->
 
 <section id="section2" class="section">
-    <a href="../digi_fab/index.html"><h2>デジタルファブリケーション</h2>
-    <a href="../digi_fab/index.html"><img src="../xbp/images/digi_fab_daijest3.png" alt="digi_fab" width="50%" srcset=""></a>
+    <a href="../xbp/digi_fab/index.html"><h2>デジタルファブリケーション</h2>
+    <a href="../xbp/digi_fab/index.html"><img src="../xbp/images/digi_fab_daijest3.png" alt="digi_fab" width="50%" srcset=""></a>
     
     </section>
 
@@ -64,8 +64,8 @@
 <!-- ここからsection3 -->
 
 <section id="section3" class="section">
-    <a href="../de34/index.html"><h2>デザイン演習Ⅲ・Ⅳ</h2></a>
-    <a href="../de34/index.html"><img src="../xbp/images/de34_daijest.png" alt="de34" width="50%" srcset=""></a>
+    <a href="../xbp/de34/index.html"><h2>デザイン演習Ⅲ・Ⅳ</h2></a>
+    <a href="../xbp/de34/index.html"><img src="../xbp/images/de34_daijest.png" alt="de34" width="50%" srcset=""></a>
 </section>
 
 
@@ -73,8 +73,8 @@
 <!-- ここからsection4 -->
 
 <section id="section4" class="section">
-    <a href="../de5/index.html"><h2>デザイン演習Ⅴ</h2></a>
-    <a href="../de5/index.html"><img src="../xbp/images/white.png" alt="de5" width=50%" srcset=""></a>
+    <a href="../xbp/de5/index.html"><h2>デザイン演習Ⅴ</h2></a>
+    <a href="../xbp/de5/index.html"><img src="../xbp/images/white.png" alt="de5" width=50%" srcset=""></a>
 
 </section>
 
