--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 <main>
 
 <h1>小林正樹のXBPポートフォリオ</h1>
-
+<br>
+<br>
+<div>明日は明日の風が吹く</div>
 <!-- ここからsection1 -->
 <section id="section1" class="section">
     <a href="../xbp/de12/index.html"><h2>デザイン演習Ⅰ・Ⅱ</h2></a>
@@ -85,6 +87,7 @@
 </main>
 
 <footer>
+    <div>⬇︎今回使用したwebテンプレートです</div>
 <small>Copyright&copy; <a href="index.html">Artist Web Site</a> All Rights Reserved.</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
