--- a/de5/1.html
+++ b/de5/1.html
@@ -42,7 +42,7 @@
             各家庭個人に個人に自身が消費した電力を教えるサービス<br>
             スケッチ↓<br>
             <img src="../de5/images/de5-2skecth.png" alt="" width="50%"><br>
-            各家庭個人に個人に自身が消費した電力を教えるサービス<br>
+            webサイトのリンク同士の関係がわかりやすくなるサービス<br>
            </div>
 </body>
 
