--- a/de5/1.html
+++ b/de5/1.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>小林正樹 de5 1回目 宿題「世の中に存在する課題の発見」</h1>
+    <div>20240923</div>
     <h2>宿題について</h2>
         <div id = homework>
             <a href="https://kuxbp.github.io/xbp/xbp2023/design_e34/#:~:text=%E5%93%A1%E3%81%A8%E3%81%AA%E3%82%8A%E3%81%BE%E3%81%99%E3%80%82-,%2D%2D%EF%BC%88%E5%AE%BF%E9%A1%8C%EF%BC%89HP%E4%BD%9C%E6%88%90%2D%2D,-%E3%81%84%E3%81%A4%E3%82%82%E3%81%AE%E3%82%88%E3%81%86">
