--- a/de56/1.html
+++ b/de56/1.html
@@ -3,12 +3,12 @@
 <head>
 
 
-    <title>小林正樹　de5</title>
+    <title>小林正樹　de56</title>
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>小林正樹 de5 1回目 宿題「世の中に存在する課題の発見」</h1>
+    <h1>小林正樹 de56 1回目 宿題「世の中に存在する課題の発見」</h1>
     <div>20240923</div>
     <h2>宿題について</h2>
         <div id = homework>
@@ -17,10 +17,10 @@
             ↑https://kuxbp.github.io/xbp/xbp2023/design_e34/の宿題の項目に飛びます）
             <br>
             20240725時点での宿題<br>
-            <img src="../de5/images/de56Homework.png" width="50%"><br>
+            <img src="../de56/images/de56Homework.png" width="50%"><br>
             <br>
             宿題1 HP作成<br>
-            de5用にWebページを作ること<br><br>
+            de56用にWebページを作ること<br><br>
 
             <span class=under2>宿題2 仲間探し<br>
             1チーム4名まで。夏休みのうちに仲間を見つけておく。<br><br>
@@ -39,10 +39,10 @@
             <h2>宿題「世の中に存在する課題の発見」</h2>
             <br>
             スケッチ↓<br>
-            <img src="../de5/images/de56-1skech.jpg" alt="" width="50%"><br>
+            <img src="../de56/images/de56-1skech.jpg" alt="" width="50%"><br>
             各家庭個人に個人に自身が消費した電力を教えるサービス<br>
             スケッチ↓<br>
-            <img src="../de5/images/de5-2skecth.png" alt="" width="50%"><br>
+            <img src="../de56/images/de56-2skecth.png" alt="" width="50%"><br>
             webサイトのリンク同士の関係がわかりやすくなるサービス<br>
            </div>
 </body>
@@ -54,7 +54,7 @@
     <div id =column>
             <h2>コラム的なアレ: 指定したいのリンクの指定のリンクに飛ばす方法</h2>
             <br>
-            <img src="../de5/images/selectUrl.png" width="50%"><br>
+            <img src="../de56/images/selectUrl.png" width="50%"><br>
             ↑「選択箇所へのリンクをコピー」を押して、自分の.htmlに貼り付けるだけ！<br>
             （この機能はchrome、Microsoft edgeならある）<br>
             <br>
