--- a/de56/2.html
+++ b/de56/2.html
@@ -11,7 +11,17 @@
     <body>
 
         <h1>小林正樹 de56 2回目</h1>
-            <h2></h2>
+            <h2>ビジネスモデル</h2>
             <div>20240930</div>
+        <div>
+            今回のメモと写真
+
+
+
+        </div>
+
+
+
+
 
     </body>
