--- a/de56/2.html
+++ b/de56/2.html
@@ -16,8 +16,8 @@
         <div>
             【資料】今回のメモと写真<br>
         <img src="../de56/images/de56_20240930/Bizgram.png" width="50%">
-        <img src="../de56/images/de56_20240930/BM20240930@3.jpg" width="50%">
-        <img src="../de56/images/de56_20240930/BM20240930@4.jpg" width="50%">
+        <img src="../de56/images/de56_20240930/BM20240930@3.png" width="50%">
+        <img src="../de56/images/de56_20240930/BM20240930@4.png" width="50%">
         <img src="../de56/images/de56_20240930/BMC.jpg" width="50%">
         <img src="../de56/images/de56_20240930/BMS@711.jpg" width="50%">
         <img src="../de56/images/de56_20240930/BMS@APL.jpg" width="50%">
