--- a/de56/2.html
+++ b/de56/2.html
@@ -22,7 +22,7 @@
         <img src="../de56/images/de56_20240930/BMC.jpg" width="40%" sizes="100%">
         <br>
         <img src="../de56/images/de56_20240930/BMS@711.png" width="40%" sizes="100%">
-        <img src="../de56/images/de56_20240930/BMS@APL.jpg" width="40%" sizes="100%">
+        <img src="../de56/images/de56_20240930/BMS@APL.png" width="40%" sizes="100%">
 
 
         </div>
